--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
+    compile 'io.reactivex:rxjava:1.1.6'
 }
