--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ dependencies {
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
     compile 'io.reactivex:rxjava:1.1.6'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
 
     implementation "android.arch.lifecycle:runtime:1.0.0-rc1"
