--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.afentanes.pokedexandroid"
         minSdkVersion 24
@@ -27,6 +27,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-auth:11.0.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -48,3 +49,7 @@ dependencies {
     testImplementation "android.arch.core:core-testing:1.0.0"
     implementation "android.arch.lifecycle:reactivestreams:1.0.0"
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
