--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".PokemonDescActivity"  android:theme="@style/AppTheme.PokemonDesc"/>
+
+        <activity android:name=".MainActivity" android:label="Login"/>
     </application>
 
 </manifest>
