loading fragment enabled pokemons visible , logout button enabled

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,15 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
+            android:label="Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".PokemonDescActivity"  android:theme="@style/AppTheme.PokemonDesc"/>
 
-        <activity android:name=".MainActivity" android:label="Login"/>
+        <activity android:name=".MainActivity" android:label="@string/app_name"/>
     </application>
 
 </manifest>
